devel
-----

* Updated arangosync to v2.12.0-preview-12.

* Added "intermediateCommits" statistics return value for AQL queries, to
  relay the number of intermediate commits back that a write query performed.

* Updated ArangoDB Starter to 0.15.5-preview-3.

* Fixed a rare occuring issue where paths inside a DisjointSmart traversal
  containing only satellite relevant nodes were not returned properly 
  (ES-1265).

* Fixed BTS-926: UI showing the "create index" form to non-admin users.

* Updated Views UI with all changes necessary for the 3.10.0 launch.

* Fix for the Pregel's HITS algorithm using a fixed value instead of the
  passed "threshold" parameter. The same applied to the new HITSKleinberg.

* Do not drop follower shard after too many failed shard synchronization
  attempts.

* Added startup option `--arangosearch.skip-recovery` to skip the recovery 
  of arangosearch view links or inverted indexes.
  The startup option can be specified multiple times and is expected to either
  contain the string `all` (will skip the recovery for all view links and 
  inverted indexes) or a collection name + link id/name pair (e.g. 
  `testCollection/123456`, where `123456` is a link/index id or an index name). 
  This new startup option is an emergency means to speed up lengthy recovery 
  procedures when there is a large WAL backlog to replay. The normal recovery 
  will still take place even with the option set, but recovery data for 
  links/indexes can be skipped. This can improve the recovery speed and reduce 
  memory usage during the recovery process.
  All links or inverted indexes that are marked as to-be-skipped via the 
  option, but for which there is recovery data, will be marked as "out of sync"
  at the end of the recovery. 
  The recovery procedure will also print a list of links/indexes which it has 
  marked as out-of-sync.
  Additionally, if committing data for a link/index fails for whatever reason,